policy/istio/base/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: microservice-a
  namespace: development
spec:
  host: microservice-a.development.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: loopback
  namespace: development
spec:
  host: istio-ingress.istio-system.svc.cluster.local
  subsets:
  - name: loopback
