policy/istio/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: development
spec:
  gateways:
    - demo-gateway
  hosts:
  - "demo.microservice.local"
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      authority: demo-microservice.development.svc.cluster.local
    route:
    - destination:
        host: istio-ingress.istio-system.svc.cluster.local
        subset: loopback
        port:
          number: 80
---
